theme css removed.

--- a/styles/ShowRating.module.scss
+++ b/styles/ShowRating.module.scss
@@ -30,12 +30,13 @@
         background-color: var(--DarkBlue);
         color: var(--Orange);
         font-size: 1.5rem;
-        padding: 8px 0;
+        padding: 7px 0;
         border-radius: 15px;
+        border: none;
     }
 
     .headingSecondary {
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       color: var(--White);
       margin-top: 2.5rem;
       margin-bottom: 0;
