--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Overpass', sans-serif;
+  font-family: "Overpass", sans-serif;
   font-size: 62.5%;
+  color: white;
+  background: var(--VeryDarkBlue);
 }
 
 a {
@@ -15,16 +17,6 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: var(--VeryDarkBlue);
-  }
 }
 
 :root {
